prd_package/objects/PAX_Flown_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Data_Date_Key__c</fullName>
        <description>yyyy-MM-dd example 2017-02-01. Always put day = 01</description>
        <externalId>true</externalId>
        <label>Data Date Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Date__c</fullName>
        <label>Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Passengers__c</fullName>
        <label>Total Passengers</label>
        <summarizedField>PAX_Flown_Detail__c.Total_Passengers__c</summarizedField>
        <summaryForeignKey>PAX_Flown_Detail__c.PAX_Flown_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>PAX Flown Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Data_Date__c</columns>
        <columns>Data_Date_Key__c</columns>
        <columns>Total_Passengers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PAX Flown Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAX Flown Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>